7171890: C1: add Class.isInstance intrinsic

Class.cast which calls Class.isInstance is heavily used by the new JSR 292 implementation

Reviewed-by: roland